<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sharing Text</string>
    
    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="btn_action_connection">Connect or Disconnect</string>
    <string name="btn_action_clear">Clear Text</string>
    <string name="btn_action_send">Send Text</string>
    <string name="btn_action_copy">Copy Text</string>
    <string name="btn_action_scan">Scan Code</string>
    
    <!-- Preference Title -->
    <string name="pref_ip_title">Server IP Address</string>
    <string name="pref_port_title">Local Port</string>
    <string name="pref_server_title">Server</string>
    <string name="pref_local_title">Local</string>
    <string name="pref_sport_title">Server Port</string>
    
    <!-- Preference Descriptions -->
    <string name="pref_ip_desc">Enter the IP Address of Server</string>
    <string name="pref_sport_desc">Enter the port number of server on which the service is running</string>
    <string name="pref_port_desc">Enter the desired port number must be non-standard and >1024</string>
    
    <!-- Preference Keys -->
    <string name="pref_ip">ip_address</string>
    <string name="pref_port">lport_number</string>
    <string name="pref_sport">sport_number</string>
    <string name="pref_filename">nu.info.zeeshan.getthetext</string>
    
    <!-- Toast Messages -->
    <string name="toast_textcopied">Text copied!</string>
    <string name="toast_notext">No text to copy!</string>
    <string name="toast_disconnected">Connection Terminated!</string>
    <string name="toast_conn_error">Unable to Connect! Make sure you are connected to same network</string>
    
    <string name="edittext_msg">Your text here</string>
    <string name="textviewlocal">Your </string>
    <string name="textviewserver">Server </string>
    <string name="porterror">Port not set</string>
    <string name="invalidip">IP address is incorrect, Try another one</string>
    <string name="invalidport">Port is incorrect, Try another one</string>
    <string name="empty">That\'s nothing</string>
    <string name="updating">Updating please wait</string>
    <string name="serverstop">Stop Server</string>
    <string name="serverstart">Start Server</string>
    <string name="app_about_desc">App Version 1.0\nDeveloped by Zeeshan Khan\n\u00A9 2014 Zeeshan Khan All Rights Reserved\n\nFork me on Github!\nhttp://github.com/zkhan93/SharingText\n\nDeveloper Profile\nhttp://zkhan93.github.io\n\nYou Like it Then Rate it on Play Store!\n http://play.google.com/store/apps/details?id=io.github.zkhan93.sharingtext</string>

</resources>