<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textViewServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textviewserver"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewLocal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textviewlocal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RelativeLayout
         android:id="@+id/relativetextcontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextReceived"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edittext_msg"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:selectAllOnFocus="true"
            android:layout_alignParentBottom="true"
             >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/buttonSend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/btn_action_send"
            android:onClick="sendText"
            android:src="@drawable/ic_send_b" />

        <ImageButton
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/btn_action_clear"
            android:onClick="clearText"
            android:src="@drawable/ic_delete_b" />

        <ImageButton
            android:id="@+id/buttonCon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/btn_action_connection"
            android:onClick="setConnection"
            android:src="@drawable/ic_disconnected_b" />

        <ImageButton
            android:id="@+id/buttonCopy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:background="@null"
            android:contentDescription="@string/btn_action_copy"
            android:onClick="copyText"
            android:src="@drawable/ic_copy_b" />
    </LinearLayout>

</LinearLayout>